@@ -1,6 +1,8 @@
 Noteworthy changes in version 0.6.3 (unreleased)
 ------------------------------------------------
 
+ * Fixed a data corruption bug in assuan_get_data_fp.
+
 Noteworthy changes in version 0.6.2 (2003-12-18)
 ------------------------------------------------
 
